syntax = "proto3";
option csharp_namespace = "Grpc.Demo.Server";

import "google/protobuf/empty.proto";

package LuCat;

service LuCat {
  rpc SuckingCat (google.protobuf.Empty) returns (SuckingCatResult);
  rpc BathTheCat (stream BathTheCatReq) returns (stream BathTheCatResp);
  rpc Count (google.protobuf.Empty) returns (CountCatResult);
}

message SuckingCatResult{
    string message=1;
}

message BathTheCatReq{
	int32 id=1;
}

message BathTheCatResp{
	string message=1;
}

message CountCatResult{
	int32 Count=1;
}